add_executable(${LOCAL_NAME}
  main.cpp
  Bases.cpp
  MCnucl.cpp
  GlueDensity.cpp
  MakeDensity.cpp
  KLNModel.cpp
  OverLap.cpp
  Largex.cpp
  Regge96.cpp
  rcBKfunc.cpp
  MathBasics.cpp
  ParameterReader.cpp
  arsenal.cpp
  EOS.cpp
  GaussianNucleonsCal.cpp
  NBD.cpp
  RandomVariable.cpp
  TableFunction.cpp
  Table.cpp
  )

# require GSL
target_link_libraries(${LOCAL_NAME} ${GSL_LIBRARIES})

# install compiled binary
install (TARGETS ${LOCAL_NAME} DESTINATION ${LOCAL_NAME})
